# hatch-kicad

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: main.yml  test.yml
src/hatch_kicad/: __about__.py  __init__.py  build.py  config.py  hooks.py  repository.py  utils.py  zip.py
src/hatch_kicad/licenses/: supported.py
tests/: conftest.py  test_build.py  test_hooks.py  test_repository.py  utils.py
